# Nexus

./: .coverage  .gitignore  .infisical.json  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy-wiki.yml  release.yml
docs/wiki/: Configuration.md  Home.md
nexus/: app.py  commands.py  config.py  container.py  logger.py  models.py  state.py  style.tcss  tools.toml
nexus/screens/: create_project.py  error.py  flag_picker.py  help.py  project_picker.py  quit_confirmation.py  theme_picker.py  tool_selector.py
nexus/services/: executor.py  scanner.py
nexus/styles/: main.tcss
nexus/widgets/: footer.py  tool_browser.py  tool_list_item.py
tests/: conftest.py  repro_nav_bug.py  repro_nav_bug_v2.py  test_commands.py  test_project_picker.py  test_scanner.py  test_screens.py  test_services.py  test_state.py  test_ui.py
