[project]
name = "nexus"
version = "0.1.0"
description = "A modular TUI for managing development workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "textual>=0.86.0",
]

[project.scripts]
nexus = "nexus.app:main"

[tool.nexus]
priority_terminals = ["kitty", "ghostty", "gnome-terminal", "xterm", "wezterm", "alacritty"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.hatch.build.targets.sdist]
include = ["nexus/tools.toml"]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "pytest>=8.0.0",
    "ty>=0.0.12",
]
