[project]
name = "nexus-tui"
version = "0.2.0"
description = "A TUI orchestrator to manage your installed terminal tools: access everything through a single command"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "textual>=8.0.0",
    "structlog>=25.5.0",
    "thefuzz>=0.22.0",
    "platformdirs>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/jdluu/Nexus"
Repository = "https://github.com/jdluu/Nexus"
Changelog = "https://github.com/jdluu/Nexus/blob/main/CHANGELOG.md"

[project.scripts]
nexus = "nexus.app:main"

[tool.nexus]
priority_terminals = ["kitty", "ghostty", "gnome-terminal", "xterm", "wezterm", "alacritty"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.hatch.build.targets.sdist]
include = ["nexus", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=9.0.0",
    "mypy>=1.15.0",
    "pytest-asyncio>=1.3.0",
    "types-toml>=0.10.8",
    "pytest-cov>=7.0.0",
    "textual-dev>=1.8.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["nexus"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
